<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2010 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<resources>

    <string name="app_name">关机/唤醒 窗口</string>
    <string name="close_pc">关 机</string>
    <string name="wakeup_pc">唤醒</string>
    <string name="view_source">查看源码</string>
    <string  name="input_url">输入网址</string>
    
    
    
    <string name="form_title">唤醒主机</string>
    <string name="ip_or_host">ip/host</string>
    <string name="mac">mac</string>
    <string name="port">port</string>
    <string name="tip_ip">请输入ip</string>
    <string name="tip_port">请输入port</string>
    <string name="tip_mac">请输入mac</string>
    <string name="submit">提交</string>
    <string name="title_activity_view_source">ViewSourceActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

</resources>
